--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GHOST_API_URL=https://eleventy.ghost.io
-GHOST_CONTENT_API_KEY=5a562eebab8528c44e856a3e0a
+GHOST_API_URL=https://komodoplatform.com/en/blog
+GHOST_CONTENT_API_KEY=79fff5fbec09d3e87acad5b606
 SITE_URL=http://localhost:8080
