--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clean-css": "^4.2.1",
     "cross-env": "^7.0.0",
     "dotenv": "^8.0.0",
-    "eleventy-plugin-lazyimages": "liamfiddler/eleventy-plugin-lazyimages",
+    "eleventy-plugin-lazyimages": "https://github.com/KomodoPlatform/eleventy-plugin-lazyimages",
     "eleventy-plugin-local-images": "^0.4.0",
     "eslint-utils": "3.0.0",
     "html-minifier": "^4.0.0",
